Fix sticky header overlap bug affecting pages that use main.main-content by assigning generic padding

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,8 @@ a {
     background-color: var(--bg-main);
 }
 
-.article-page main.container {
+.article-page main.container,
+.article-page main.main-content {
     padding-top: 90px; /* Account for fixed 70px header + small margin */
 }
 
